--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link rel="shortcut icon" href="/Favicons/favicon.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/Favicons/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/Favicons/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/Favicons/favicon-16x16.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel="stylesheet" href="/src/styles/index.css" />
+    <title>Concero Scan</title>
+    <!--app-head-->
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"><!--app-html--></div>
     <script type="module" src="/src/ssr/entry-client.tsx"></script>
   </body>
 </html>
