--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<!--app-head-->
 	</head>
 	<body>
-		<div id="root"><!--app-html--></div>
-		<script type="module" src="/src/ssr/entry-client.tsx"></script>
+		<div id="root"></div>
+		<script type="module" src="/src/main.tsx"></script>
 	</body>
 </html>
