--- a/index.html
+++ b/index.html
@@ -2,13 +2,41 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
+		<title>Concero | Scan</title>
+		<meta
+			name="description"
+			content="Track and verify Concero transactions effortlessly with Concero Scan. A fast, secure, and transparent tool designed exclusively for monitoring transactions routed through Concero’s cross-chain infrastructure"
+		/>
+		<meta
+			content="concero, blockchain testing, decentralized applications, blockchain integration, ethereum, arbitrum, optimism, sepolia, megaeth, monad, berachain, chainlink, ccip, concero"
+			name="keywords"
+		/>
+
+		<meta content="website" property="og:type" />
+		<meta content="https://scan.concero.io/" property="og:url" />
+		<meta content="Concero | Scan" property="og:title" />
+		<meta
+			content="Making cross-chain effortless. A quicker, safer &amp; easier to use cross-chain infrastructure. Scalable, secure, capital efficient and decentralised bridging & messaging"
+			property="og:description"
+		/>
+		<meta content="https://scan.concero.io/OG/OG.png" property="og:image" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:site" content="@concero_io" />
+		<meta name="twitter:creator" content="@concero_io" />
+		<meta name="twitter:domain" content="concero.io" />
+		<meta name="twitter:title" content="Concero | Scan" />
+		<meta
+			name="twitter:description"
+			content="Track and verify Concero transactions effortlessly with Concero Scan. A fast, secure, and transparent tool designed exclusively for monitoring transactions routed through Concero’s cross-chain infrastructure"
+		/>
+		<meta name="twitter:image" content="https://scan.concero.io/OG/OG.png" />
+		<meta name="twitter:image:alt" content="Concero" />
 		<link rel="shortcut icon" href="/Favicons/favicon.ico" />
 		<link rel="apple-touch-icon" sizes="180x180" href="/Favicons/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/Favicons/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/Favicons/favicon-16x16.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Concero Scan</title>
-		<!--app-head-->
 	</head>
 	<body>
 		<div id="root"></div>
